logs/batchjob_8.871.out
Running on host grad02

Initial Time is Wed 18 May 2022 12:42:41 PM -03

Directory is /home/pp12704/trabalho1

This jobs runs on the following nodes:
grad02

JOB_ID:
871

mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
mandelbrot.c: In function ‘main’:
mandelbrot.c:27:11: error: for statement expected before ‘printf’
   27 |           printf("%d threads", omp_get_num_threads());
      |           ^~~~~~
Final Time is Wed 18 May 2022 12:42:42 PM -03
